# metaspn-entities

./: .gitignore  CHANGELOG.md  README.md  RELEASE.md  pyproject.toml
.github/workflows/: publish.yml  release.yml
metaspn_entities/: __init__.py  adapter.py  attribution.py  context.py  demo.py  events.py  models.py  normalize.py  resolver.py  season1.py  sqlite_backend.py  token_links.py
tests/: test_adapter.py  test_attribution.py  test_context.py  test_demo_support.py  test_event_contract.py  test_recommendation_context.py  test_resolver.py  test_season1.py  test_token_links.py
