[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metaspn-entities"
version = "0.1.8"
description = "Canonical entity resolution, aliasing, and merges for MetaSPN systems"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  {name = "MetaSPN Contributors"}
]
keywords = ["entity-resolution", "identity", "aliasing", "dedupe", "sqlite"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Topic :: Database",
]
dependencies = [
  "metaspn-schemas"
]

[project.optional-dependencies]
dev = [
  "build>=1.2.0",
  "twine>=5.0.0"
]

[tool.setuptools]
packages = ["metaspn_entities"]
